edits to the 20 sets